# NTUST_CSIE_DS

./: .gitignore  README.md  isolationForest_seed_1221_213629.csv  isolationForest_seed_1221_213636.csv  isolationForest_seed_1221_213639.csv  isolationForest_seed_1221_224042.csv  isolationForest_seed_1221_224051.csv  isolationForest_seed_1221_224100.csv  pyproject.toml  xgboost_1207_2357.csv  xgboost_1207_2358.csv
DataSet/PU_Results/: pu_predictions_T1_basic_XGB.csv
Example/: example.py
Hybrid_Pipeline/: find_label_1.ipynb  test.py  train.ipynb
Hybrid_Pipeline/src/: AE.py  CatBoost.py  data_processing.py  model.py
PUlearning/: pu_trainer.py
PUlearning/PU_Results/CSV/: pu_predictions_T1_2_3_XGB.csv  pu_predictions_T1_2_XGB.csv  pu_predictions_T1_basic.csv  pu_predictions_T1_basic_XGB.csv
PUlearning/PU_Results/Logs/: evaluater_log_1222_214656.txt  evaluater_log_1222_214716.txt  (+1 more)
PreProcessing_T1/: PreProcessing_T1.ipynb  T1_Features_Clean.ipynb
PreProcessing_T2/: PreProcessing_T2.ipynb
Preprocessing/: preprocessing_T3.ipynb
Preprocessing_T3/: Visualization.ipynb  preprocessing_T3.ipynb
Preprocessing_basic/: basic_preprocessing.py
Util/: Evaluater.py  MergeData.ipynb  PrepareData.py  Score_Based_Evaluater.py  Visualization.ipynb
XGBoost/: Training.py  Trainning.ipynb  inference.py  main.py  output.csv  preprocessing.py  trainning.py  xgb_model.json  xgb_model_1208_231509.json  xgb_model_seed_42.json  xgb_model_seed_84.json
XGBoost/Result/: evaluater_log_1218_223747.txt
isolationForest/: IF_training.py
lightGBM/: train.ipynb
(+41 files in other folders)
