[project]
name = "ntust_csie_ds"
version = "0.1.0"
description = ""

readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pytest==7.4.3",
    "numpy==1.23.5",
    "pandas==1.5.3",
]

[dependency-groups]
xgboost = [
    "xgboost==1.7.5",
    "scikit-learn==1.2.0",
]

[tool.setuptools]
packages = ["XGBoost"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
